# Hackhathon-2-phase-2

./: .gitignore  README.md  backend-test.js  connection-test.js  package-lock.json
.claude/Skills/auth skill/: skill.md
.claude/Skills/database skill/: skill.md
.claude/Skills/fastapi-backend- skill/: skill.md
.claude/Skills/frontend skill/: skill.md
.claude/agents/: auth-agent.md  database-agent.md  fastapi-backend-agent.md  frontend-agent.md
.specify/memory/: constitution.md
backend/: .gitignore  Dockerfile  app.json  main.py  pyproject.toml  requirements.txt  setup.py
backend/api/: auth.py  dashboard.py  tasks.py
backend/src/database/: database.py  models.py
backend/src/models/: task.py  user.py
backend/src/services/: task_service.py
backend/src/utils/: db_check.py  jwt.py
frontend/: .eslintrc.json  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/tasks/: page.tsx
frontend/app/tasks/[id]/: page.tsx
frontend/app/tasks/new/: page.tsx
frontend/src/components/: AppShell.tsx
frontend/src/context/: toast.tsx
frontend/src/lib/: api.ts
history/prompts/constitution/: 1-add-initial-constitution.constitution.prompt.md
history/prompts/general/: 001-sp-plan.general.prompt.md  002-sp-tasks.general.prompt.md  003-sp-implement.general.prompt.md
shared/: types.ts
specs/: data-model.md  plan.md  spec.md  tasks.md
specs/ui/: api-client.md  components.md  design-guidelines.md  layout.md  pages.md
(+1 files in other folders)
